// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sliderField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
        data-options="false"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u6d"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5v"
          >
            <span
              class="uv_a5ifr1h uv_a5ifr1k uv_a5ifr1i uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              data-testid="slider-value"
              style="--uv_qabug40: right;"
            >
              0
            </span>
          </div>
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5j"
            style="--uv_4k0ekn0: 100%;"
          >
            <input
              aria-label="test"
              class="uv_a5ifr1p uv_a5ifr1t uv_a5ifr1b uv_a5ifr1d uv_a5ifr1f"
              data-direction="column"
              data-error="false"
              id="_r_0_"
              max="100"
              min="0"
              name="test"
              step="1"
              style="--uv_a5ifr12: calc(0% - 8px); --uv_a5ifr11: #ffffff; background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="Slider Input"
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
        data-options="false"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u6d"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5v"
          >
            <span
              class="uv_a5ifr1h uv_a5ifr1k uv_a5ifr1i uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              data-testid="slider-value"
              style="--uv_qabug40: right;"
            >
              0
            </span>
          </div>
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5j"
            style="--uv_4k0ekn0: 100%;"
          >
            <input
              aria-disabled="true"
              aria-label="Slider Input"
              class="uv_a5ifr1p uv_a5ifr1t uv_a5ifr1r uv_a5ifr1b uv_a5ifr1c uv_a5ifr1f"
              data-direction="column"
              data-error="false"
              disabled=""
              id="_r_q_"
              max="100"
              min="0"
              name="test"
              step="1"
              style="--uv_a5ifr12: calc(0% - 8px); --uv_a5ifr11: #ffffff; background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should render correctly with possible values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52uj uv_toi52u5d"
        data-options="true"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u6d"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5v"
          >
            <span
              class="uv_a5ifr1h uv_a5ifr1k uv_a5ifr1i uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              data-testid="slider-value"
              style="--uv_qabug40: right;"
            >
              1
            </span>
          </div>
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5j"
            style="--uv_4k0ekn0: 100%;"
          >
            <input
              aria-label="test"
              class="uv_a5ifr1p uv_a5ifr1t uv_a5ifr1b uv_a5ifr1d uv_a5ifr1f"
              data-direction="column"
              data-error="false"
              id="_r_3_"
              max="6"
              min="0"
              name="test"
              step="1"
              style="--uv_a5ifr12: calc(0% - 8px); --uv_a5ifr11: #ffffff; background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
            <datalist
              class="uv_a5ifr16"
              data-double="false"
            >
              <span
                class="uv_a5ifr18 uv_a5ifr19"
                data-element-left="true"
                data-element-right="false"
                data-value="0"
                style="--uv_a5ifr13: 0%;"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  1Mb
                </p>
              </span>
              <span
                class="uv_a5ifr18"
                data-element-left="false"
                data-element-right="false"
                data-value="1"
                style="--uv_a5ifr13: 16.666666666666668%;"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  3Mb
                </p>
              </span>
              <span
                class="uv_a5ifr18"
                data-element-left="false"
                data-element-right="false"
                data-value="2"
                style="--uv_a5ifr13: 33.333333333333336%;"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  5Mb
                </p>
              </span>
              <span
                class="uv_a5ifr18"
                data-element-left="false"
                data-element-right="false"
                data-value="3"
                style="--uv_a5ifr13: 50%;"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  10Mb
                </p>
              </span>
              <span
                class="uv_a5ifr18"
                data-element-left="false"
                data-element-right="false"
                data-value="4"
                style="--uv_a5ifr13: 66.66666666666667%;"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  50Mb
                </p>
              </span>
              <span
                class="uv_a5ifr18"
                data-element-left="false"
                data-element-right="false"
                data-value="5"
                style="--uv_a5ifr13: 83.33333333333333%;"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  100Mb
                </p>
              </span>
              <span
                class="uv_a5ifr18 uv_a5ifr1a"
                data-element-left="false"
                data-element-right="true"
                data-value="6"
                style="--uv_a5ifr13: 100%;"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  500Mb
                </p>
              </span>
            </datalist>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should render correctly with possible values and double 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_a5ifr14 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52uj uv_toi52u5d"
        data-double="true"
        data-options="true"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u6d"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
            style="--uv_4k0ekn0: 100%;"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u6p"
            >
              <span
                class="uv_a5ifr1h uv_a5ifr1j uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                data-testid="value-left"
                style="--uv_qabug40: right;"
              >
                1
              </span>
              <span
                class="uv_a5ifr1h uv_a5ifr1j uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                data-testid="value-right"
                style="--uv_qabug40: right;"
              >
                500
              </span>
            </div>
            <div
              class="uv_a5ifr1v"
            >
              <div
                class="uv_a5ifr1w"
              >
                <div
                  aria-disabled="false"
                  class="uv_a5ifr1x"
                  data-error="false"
                  style="left: 0%; right: 0%;"
                />
              </div>
              <input
                aria-label="test"
                class="uv_a5ifr1l uv_a5ifr1n uv_a5ifr1b uv_a5ifr1d uv_a5ifr1e uv_a5ifr1g"
                data-direction="column"
                data-testid="handle-left"
                id="_r_d_"
                max="6"
                min="0"
                name="test"
                step="1"
                style="--uv_a5ifr12: calc(0% - 8px; --uv_a5ifr11: #ffffff;"
                type="range"
                value="0"
              />
              <input
                aria-label="test"
                class="uv_a5ifr1l uv_a5ifr1n uv_a5ifr1b uv_a5ifr1d uv_a5ifr1e uv_a5ifr1g"
                data-direction="column"
                data-testid="handle-right"
                id="_r_d_"
                max="6"
                min="0"
                name="test"
                step="1"
                style="--uv_a5ifr12: calc(100% - 8px; --uv_a5ifr11: #ffffff;"
                type="range"
                value="6"
              />
              <datalist
                class="uv_a5ifr16 uv_a5ifr17"
                data-double="true"
              >
                <span
                  class="uv_a5ifr18 uv_a5ifr19"
                  data-element-left="true"
                  data-element-right="false"
                  data-value="0"
                  style="--uv_a5ifr13: 0%;"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9ow9 uv_m4c9owi uv_m4c9oww uv_m4c9ow1b uv_m4c9ow1c uv_m4c9ow3c"
                  >
                    1Mb
                  </p>
                </span>
                <span
                  class="uv_a5ifr18"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="1"
                  style="--uv_a5ifr13: 16.666666666666668%;"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    3Mb
                  </p>
                </span>
                <span
                  class="uv_a5ifr18"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="2"
                  style="--uv_a5ifr13: 33.333333333333336%;"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    5Mb
                  </p>
                </span>
                <span
                  class="uv_a5ifr18"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="3"
                  style="--uv_a5ifr13: 50%;"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    10Mb
                  </p>
                </span>
                <span
                  class="uv_a5ifr18"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="4"
                  style="--uv_a5ifr13: 66.66666666666667%;"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    50Mb
                  </p>
                </span>
                <span
                  class="uv_a5ifr18"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="5"
                  style="--uv_a5ifr13: 83.33333333333333%;"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    100Mb
                  </p>
                </span>
                <span
                  class="uv_a5ifr18 uv_a5ifr1a"
                  data-element-left="false"
                  data-element-right="true"
                  data-value="6"
                  style="--uv_a5ifr13: 100%;"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9ow9 uv_m4c9owi uv_m4c9oww uv_m4c9ow1b uv_m4c9ow1c uv_m4c9ow3c"
                  >
                    500Mb
                  </p>
                </span>
              </datalist>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should trigger events correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
        data-options="false"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u6d"
        >
          <div
            class="uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u6p"
          >
            <div
              class="uv_toi52u0 uv_toi52u3j uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <label
                class="uv_17td3g91 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                for="_r_t_"
              >
                Test
              </label>
              <span
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owd uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow1k uv_m4c9ow3c"
              >
                *
              </span>
            </div>
            <div
              class="uv_a5ifr110 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <div>
                <div
                  class="uv_1ce7gb6h uv_1ce7gb6n uv_1ce7gb6i"
                  data-controls="false"
                  data-disabled="false"
                  data-error="false"
                  data-size="small"
                  data-success="false"
                  data-unit="false"
                >
                  <div
                    class="uv_1ce7gb63 uv_1ce7gb64 uv_x6hyh50 uv_x6hyh52p uv_x6hyh561"
                    style="--uv_3mg8xe0: 1fr auto; --uv_3mg8xe1: 1fr auto; --uv_3mg8xe2: 1fr auto; --uv_3mg8xe3: 1fr auto; --uv_3mg8xe4: 1fr auto; --uv_3mg8xe5: 1fr auto;"
                  >
                    <input
                      aria-label="input"
                      class="uv_1ce7gb6b uv_1ce7gb6d uv_1ce7gb6g"
                      data-testid="slider-input"
                      id="_r_10_"
                      max="10"
                      min="0"
                      placeholder=""
                      step="1"
                      type="number"
                      value="0"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5v"
          />
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5j"
            style="--uv_4k0ekn0: 100%;"
          >
            <input
              aria-label="test"
              class="uv_a5ifr1p uv_a5ifr1t uv_a5ifr1b uv_a5ifr1d uv_a5ifr1f"
              data-direction="column"
              data-error="false"
              id="_r_t_"
              max="10"
              min="0"
              name="test"
              step="1"
              style="--uv_a5ifr12: calc(0% - 8px); --uv_a5ifr11: #ffffff; background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
